<resources>
    <string name="app_name">Final Project 4 - Kelompok4</string>
    <string name="bus_exchange">bus exchange</string>
    <string name="version_2_01">Version 2.01</string>
    <string name="welcome">Welcome !</string>
    <string name="description_login">Bux is a online booking service for\nBus transportation. login now to\nuser Bux services.</string>
    <string name="description_setup">Fill your phone number below, so we can easily catch you\nup.</string>
    <string name="description_finish_registration">You’re all set and ready to use Bux.\nEnjoy our service!</string>
    <string name="sign_up_with_google">Sign up With Google</string>
    <string name="almost_there">Almost there</string>
    <string name="phone_number">Phone number</string>
    <string name="your_phone_numbers_here">Your phone numbers here</string>
    <string name="save_number">SAVE NUMBER</string>
    <string name="everything_s_up">Everything\'s up!</string>
    <string name="take_me_to_bux">TAKE ME TO BUX</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_back">image_back</string>
    <string name="image_buck">image_buck</string>
    <string name="ilustration">ilustration</string>
    <string name="departure">Departure</string>
    <string name="pekanbaru_surabaya">ext : Pekanbaru, Surabaya</string>
    <string name="arrival">Arrival</string>
    <string name="passangers">Passangers</string>
    <string name="date">Date</string>
    <string name="search_bus">SEARCH BUS</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="cancel">Cancel</string>
    <string name="select_passangers">Select passangers</string>
    <string name="select_date">Select Date</string>
    <string name="select_arrival">Select Arrival</string>
    <string name="select_departure">Select departure</string>
    <string name="select_how_much_passangers">Select how much passangers</string>
    <string name="older_than_2_years_old_should_buy_a_seat">Older than 2 years old should buy a seat</string>
    <string name="select">Select</string>
    <string name="slider_range">slider_range</string>
    <string name="departure_date">departure_date</string>
    <string name="departure_date_toolbar">Departure date</string>
    <string name="best_price">Best price</string>
    <string name="most_booked">Most Booked</string>
    <string name="medan">Medan</string>
    <string name="sempati_star">Sempati Star</string>
    <string name="terminal_amplas">Terminal Amplas</string>
    <string name="book_now">Book Now</string>
    <string name="book_a_trip">Book a trip</string>
    <string name="see_picture">See Picture</string>
    <string name="image_rating_bus">image_rating_bus</string>
</resources>