<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FinishRegistrationActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_finish_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/image_back"
            />
        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_splash_logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_buck"
            />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/image_ilustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ilustration_finish_registration"
        app:layout_constraintTop_toBottomOf="@id/toolbar_finish_registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="94dp"
        android:contentDescription="@string/ilustration"
        />

    <TextView
        android:id="@+id/tvWelcome"
        style="@style/TextViewPrimaryBlack.SemiBold"
        app:layout_constraintTop_toBottomOf="@id/image_ilustration"
        android:text="@string/everything_s_up"
        android:textSize="22sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_description_finish_registration"
        style="@style/TextViewSecondaryGrey.Regular"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/description_finish_registration"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_take_me_bux"
        style="@style/ButtonPrimary"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button"
        android:text="@string/take_me_to_bux"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description_finish_registration"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>