<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SetupPhoneActivity"
    >

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextViewPrimaryBlack.SemiBold"
        android:text="@string/almost_there"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="65dp"
        />

    <TextView
        android:id="@+id/tv_description_setup"
        style="@style/TextViewSecondaryBlack.Light"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:text="@string/description_setup"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/image_ilustration_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_setup"
        app:srcCompat="@drawable/ic_ilustration_setup_phone"
        android:layout_marginTop="31dp"
        />

    <TextView
        android:id="@+id/tv_phone_number"
        style="@style/TextViewPrimaryBlack.SemiBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_ilustration_setup"
        android:layout_marginTop="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/phone_number"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_phone"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:hint="@string/your_phone_numbers_here"
        android:drawablePadding="29dp"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_semibold"
        android:inputType="phone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_number"
        style="@style/ButtonPrimary"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_button"
        android:text="@string/save_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_phone_number"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save_number"
        app:layout_constraintEnd_toEndOf="@+id/btn_save_number"
        app:layout_constraintStart_toStartOf="@+id/btn_save_number"
        app:layout_constraintTop_toTopOf="@+id/btn_save_number" />


</androidx.constraintlayout.widget.ConstraintLayout>