<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_secondary"
    tools:context=".ui.fragment.SearchFragment">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/image_back"
        />

    <FrameLayout
        android:id="@+id/frame_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ilustration_search"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/ilustration"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="206dp"
            android:background="@drawable/bg_component_search"
            >
            <TextView
                android:id="@+id/tv_title_departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/departure"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                />

            <ImageView
                android:id="@+id/img_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_marker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_departure"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_depature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title_departure"
                app:layout_constraintStart_toEndOf="@id/img_marker"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/select_departure"
                android:layout_marginEnd="18dp"
                android:textColor="@color/text_black_primary"
                android:fontFamily="@font/nunito_semibold"
                />

            <View
                android:id="@+id/view_row_one"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_depature"
                app:layout_constraintStart_toEndOf="@id/img_marker"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="18dp"
                android:background="@color/text_grey_secondary"
                />

            <TextView
                android:id="@+id/tv_title_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/arrival"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_row_one"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="30dp"
                />

            <ImageView
                android:id="@+id/img_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title_arrival"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_location"
                android:layout_marginStart="17dp"
                android:layout_marginTop="6dp"
                />

            <TextView
                android:id="@+id/tv_arrival"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title_arrival"
                app:layout_constraintStart_toEndOf="@id/img_marker"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/select_arrival"
                android:layout_marginEnd="18dp"
                android:textColor="@color/text_black_primary"
                android:fontFamily="@font/nunito_semibold"
                />
            <View
                android:id="@+id/view_row_second"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_arrival"
                app:layout_constraintStart_toEndOf="@id/img_marker"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="18dp"
                android:background="@color/text_grey_secondary"
                />

            <TextView
                android:id="@+id/tv_title_passangers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passangers"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_regular"
                app:layout_constraintTop_toBottomOf="@id/view_row_second"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                />

            <TextView
                android:id="@+id/tv_title_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/date"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_passangers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_title_passangers"
                app:layout_constraintTop_toTopOf="@+id/tv_title_passangers" />

            <ImageView
                android:id="@+id/img_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="@+id/tv_passsangers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_passangers" />

            <TextView
                android:id="@+id/tv_passsangers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/text_grey_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/img_person"
                app:layout_constraintTop_toBottomOf="@id/tv_title_passangers"
                android:text="@string/select" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextViewBlue.SemiBold"
                android:layout_marginStart="23dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_date"
                android:text="@string/select_date" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="31dp"
                android:background="@color/text_grey_secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@id/img_person"
                app:layout_constraintTop_toBottomOf="@id/tv_passsangers" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="31dp"
                android:background="@color/text_grey_secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:src="@drawable/ic_date"
                app:layout_constraintBottom_toBottomOf="@+id/tv_date"
                app:layout_constraintEnd_toStartOf="@+id/tv_title_date"
                app:layout_constraintTop_toTopOf="@+id/tv_date" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_row"
                app:layout_constraintBottom_toTopOf="@+id/img_arrival"
                app:layout_constraintEnd_toEndOf="@+id/img_marker"
                app:layout_constraintStart_toStartOf="@+id/img_marker"
                app:layout_constraintTop_toBottomOf="@+id/img_marker" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_search_bus"
        style="@style/ButtonPrimary"
        android:background="@drawable/bg_button"
        android:text="@string/search_bus"
        app:layout_constraintEnd_toEndOf="@+id/frame_component"
        app:layout_constraintStart_toStartOf="@+id/frame_component"
        app:layout_constraintTop_toBottomOf="@id/frame_component"
        android:layout_marginTop="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>